Beginning to debut responsive

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,6 +32,7 @@ button {
 
 header {
     height: 100vh;
+    min-height: 800px;
 }
 
 .beveled-frame {
@@ -73,6 +74,7 @@ header {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     max-height: 1080px;
+    min-height: 800px;
     position: relative;
     width: 100%;
     display: grid;
@@ -100,6 +102,7 @@ header {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     max-height: 1080px;
+    min-height: 800px;
     position: relative;
     width: 100%;
     display: grid;
@@ -136,6 +139,7 @@ header {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     max-height: 1080px;
+    min-height: 800px;
     width: 100%;
     display: grid;
     grid-template-rows: repeat(8, 1fr) .5fr;
@@ -392,6 +396,9 @@ header {
     }
 }
 
+.homepage-video {
+    display: none;
+}
 
 .trailer-border {
     &:before, &:after {
@@ -784,10 +791,10 @@ header {
     z-index: 1;
     box-shadow: inset 0px 0px 20px 0px $red;
     &.v {
-        background-image: url('../../Design\ Assets/v-female-blur-background.png');
-        filter: brightness(1.5);
-        background-size: 60rem;
-        background-position-x: 55%;
+        background-image: url('../../Design\ Assets/v-female-dark-background.png');
+        filter: brightness(1.125);
+        background-size: cover;
+        background-position-x: -4%;
         background-position-y: 35%;
     }
     &.dexter {
@@ -823,9 +830,9 @@ header {
     &:before, &:after {
         content: "";
         position: absolute;
-        height: 105%;
+        height: 102%;
         width: 20px;
-        top: -5%;
+        top: -3%;
         background-image: radial-gradient(circle at center, $red 1px, transparent 3px), radial-gradient(circle at center, $red 1px, transparent 3px);
         padding: 0.5rem;
         background-size: 20px 20px;
@@ -883,6 +890,7 @@ header {
     padding-left: 1rem;
     z-index: 100;
     transform: translateX(100vw);
+    cursor: pointer;
     .expanded-description & {
         transform: translateX(0);
     }
@@ -906,6 +914,7 @@ header {
     font-weight: 400;
     position: absolute;
     text-transform: none;
+    z-index: 5;
 }
 
 li.dexter, li.jackie, li.johnny {
@@ -935,6 +944,7 @@ li.dexter, li.jackie, li.johnny {
     margin: .5rem 0;
     filter: brightness(0.85);
     opacity: 0.6;
+    z-index: 5;
     &:after {
         content: '';
         height: 2px;
@@ -1048,6 +1058,17 @@ li.dexter, li.jackie, li.johnny {
     justify-content: center;
     position: relative;
     transform: translateY(2rem);
+    &.animation-enter {
+        transform: translateX(100vw);
+    }
+}
+
+.wallpaper-overlay {
+    width: 100%;
+    height: 100%;
+    max-width: 30rem;
+    max-height: 30rem;
+    position: absolute;
     &:before, &:after {
         content: "";
         position: absolute;
@@ -1066,37 +1087,36 @@ li.dexter, li.jackie, li.johnny {
     &:after {
         right: -1rem;
     }
-    &.animation-enter {
-        transform: translateX(100vw);
-    }
 }
 
 .wallpaper-preview {
     width: 100%;
-    max-width: 30rem;
     height: 100%;
+    max-width: 30rem;
+    max-height: 30rem;
     background-size: cover;
-    position: relative;
+    position: absolute;
     background-repeat: no-repeat;
     background-position-y: center;
+    background-position-x: center;
     clip-path: polygon(5% 0, 95% 0, 100% 5%, 100% 95%, 95% 100%, 5% 100%, 0 95%, 0 5%);
     &.wp-1 {
         background-image: url('../../Design\ Assets/wallpaper-one.jpg');
     }
     &.wp-2 {
-        background-image: url('../../Design\ Assets/1x/wallpaper-preview-2.png');
+        background-image: url('../../Design\ Assets/wallpaper-two.jpg');
     }
     &.wp-3 {
-        background-image: url('../../Design\ Assets/1x/wallpaper-preview-3.png');
+        background-image: url('../../Design\ Assets/wallpaper-three.jpg');
     }
     &.wp-4 {
-        background-image: url('../../Design\ Assets/1x/wallpaper-preview-4.png');
+        background-image: url('../../Design\ Assets/wallpaper-four.jpg');
     }
     &.wp-5 {
-        background-image: url('../../Design\ Assets/1x/wallpaper-preview-5.png');
+        background-image: url('../../Design\ Assets/wallpaper-five.jpg');
     }
     &.wp-6 {
-        background-image: url('../../Design\ Assets/1x/wallpaper-preview-6.png');
+        background-image: url('../../Design\ Assets/wallpaper-six.jpg');
     }
 }
 
@@ -1282,9 +1302,6 @@ li.dexter, li.jackie, li.johnny {
         &.dexter, &.jackie, &.johnny {
             background-size: 25rem;
         } 
-        &.v {
-            background-size: 80rem;
-        }
     }
 
     .characters-divider {
@@ -1296,14 +1313,25 @@ li.dexter, li.jackie, li.johnny {
     //****  PAGE 5  ****//   
 
     .wallpaper-container {
+        grid-row: 2 / span 5;
+        margin-top: 2rem;
+        transform: translateY(2rem);
+        .wallpaper-preview {
+            max-height: 30rem;
+        }
         &:before {
-            left: 0.5rem;
+            left: 0;
         }
         &:after {
-            right: 0.5rem;
+            right: 0;
+        }
+        &:before, &:after {
+            height: 89%;
+            top: -2.5%;
         }
     }
 }
+
 
 
 //***********************************************************
@@ -1311,12 +1339,13 @@ li.dexter, li.jackie, li.johnny {
 //************** <<<<<|||>>>>> **************************
 //************* <<<<<|||||>>>>> **********************
 //************ <<<<<|||||||>>>>> ******************
-//*********** <<<<<<DESKTOP>>>>>> **************
+//*********** <<<SMALL DESKTOP>>> **************
 //************ <<<<<|||||||>>>>> ************
 //************* <<<<<|||||>>>>> **********
 //************** <<<<<|||>>>>> ********
 //*************** <<<<<|>>>>> ******
 //*******************************
+
 
 
 @media screen and (min-width: 1024px) {
@@ -1379,12 +1408,23 @@ li.dexter, li.jackie, li.johnny {
         }
     }
 
+    .homepage-video {
+        display: block;
+        position: absolute;
+        min-width: 100%;
+        height: 100%;
+        object-fit: cover;
+        mix-blend-mode: hard-light;
+        opacity: 1;
+        z-index: 1;
+    }
+
     .hero-text {
-        font-size: 21rem;
-        left: -21rem;
+        font-size: 16rem;
+        left: -16rem;
         top: 6rem;
         span {
-            margin-right: 8rem;
+            margin-right: 6rem;
         }
     }
 
@@ -1548,17 +1588,23 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .about-hero {
-        background-size: 65%;
-        grid-row: 2 / span 8;
-        margin-top: 1rem;
-        grid-column: 4 /span 7;
-        filter: brightness(1.25);
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 40rem;
+        height: 50rem;
+        background-size: 100%;
+        filter: brightness(.75);
     }
 
     .about-content {
-        grid-column: 3 / span 3;
+        grid-column: 2 / span 8;
+        margin-left: auto;
+        margin-right: 15%;
+        padding-left: 3rem;
         grid-row: 5 / span 7;
-        
+        max-width: 65rem;
+        min-width: 55rem;
         h1 {
             margin-bottom: 2rem;
             padding-right: 20rem;
@@ -1577,28 +1623,30 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .about-image {
-        grid-row: 3 / span 4;
-        grid-column: 2 / span 2;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        width: 22rem;
+        height: 22rem;
         background-image: url('../../Design\ Assets/v-stare.jpg');
         background-size: cover;
         background-position-x: 30%;
-        margin-right: 12rem;
-        margin-bottom: 3rem;
     }
 
     .about-image-overlay {
-        grid-row: 3 / span 4;
-        grid-column: 2 / span 2;
-        margin-right: 12rem;
-        margin-bottom: 3rem;
-        position: relative;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        width: 22rem;
+        height: 22rem;
+        position: absolute;
         &:before, &:after {
             content: "";
             position: absolute;
             height: 100%;
             width: 20px;
             top: -1.75%;
-            background-image: radial-gradient(circle at center, $red 2px, transparent 4px), radial-gradient(circle at center, $red 2px, transparent 4px);
+            background-image: radial-gradient(circle at center, $red 1px, transparent 3px), radial-gradient(circle at center, $red 1px, transparent 3px);
             padding: 0.5rem;
             background-size: 20px 20px;
             background-position: top center, bottom center;
@@ -1647,6 +1695,8 @@ li.dexter, li.jackie, li.johnny {
     }
 
     
+
+
 //************  PAGE 4  ************//
          
 
@@ -1662,6 +1712,8 @@ li.dexter, li.jackie, li.johnny {
         //****  PAGE 4  ****// 
 
 
+
+
     .characters:after {
         left: 15%;
         z-index: -1;
@@ -1674,16 +1726,66 @@ li.dexter, li.jackie, li.johnny {
 
     .character-preview, .character-preview-overlay {
         grid-row: 4 / span 3;
-        max-width: 18rem;
-        max-height: 22rem;
+        width: 19rem;
+        height: 22rem;
         margin-top: -2rem;
+        grid-column: unset;
+        position: absolute;
+        right: 65%;
+        .expanded-description & {
+            transform: translateX(0) translateY(0);
+            grid-row: 3 / span 4;
+            box-shadow: none;
+            max-width: 25rem;
+            max-height: 27rem;
+            &:after, &:before {
+                height: 100%;
+                top: -2%;
+            }
+        }
+    }
+    .character-preview {
+        .v & {
+            .expanded-description & {
+                background-image: url('../../Design\ Assets/female-v-car.jpg');
+                background-position-x: 40%;
+                background-size: cover;
+            }
+        }
+        .dexter & {
+            .expanded-description & {
+                background-image: url('../../Design\ Assets/dexter-blurred-background.png');
+                background-size: cover;
+            }
+        }
+        .jackie & {
+            .expanded-description & {
+                background-image: url('../../Design\ Assets/jackie-sitting.jpg');
+                background-size: cover;
+                background-position-x: 50%;
+            }
+        }
+        .johnny & {
+            .expanded-description & {
+                background-image: url('../../Design\ Assets/johnny-2.jpg');
+                background-size: cover;
+                background-position-y: 0%;
+            }
+        }
+    }    
+
+    .expanded-description .back-button {
+        grid-row: 7;
     }
 
     .slide {
-        &.dexter {
+        &.animation-coming-next {
             z-index: 3;
+            .expanded-description & {
+                visibility: hidden;
+            }
         }
-        &.jackie {
+        &.animation-coming-second {
             z-index: 2;
             margin-left: 3rem;
             .character-preview {
@@ -1695,8 +1797,11 @@ li.dexter, li.jackie, li.johnny {
             .character-preview, .character-preview-overlay {
                 transform: scale(.95);
             }
+            .expanded-description & {
+                visibility: hidden;
+            }
         }
-        &.johnny {
+        &.animation-coming-third {
             z-index: 1;
             margin-left: 6rem;
             .character-preview {
@@ -1707,6 +1812,9 @@ li.dexter, li.jackie, li.johnny {
             }
             .character-preview, .character-preview-overlay {
                 transform: scale(.9);
+            }
+            .expanded-description & {
+                visibility: hidden;
             }
         }
     }
@@ -1720,10 +1828,28 @@ li.dexter, li.jackie, li.johnny {
     .character-name {
         grid-row: 4;
         margin-top: 0;
+        .expanded-description & {
+            margin-top: 10rem;
+            margin-left: -2rem;
+        }
+        .dexter &, .johnny &, .jackie & {
+            .expanded-description & {
+                line-height: 3rem;
+            }
+        }
     }
 
     .characters-divider {
         margin-top: -6rem;
+        .expanded-description & {
+            margin-top: 4rem;
+            margin-left: -2rem;
+        }
+        .dexter &, .johnny &, .jackie & {
+            .expanded-description & {
+                margin-top: 5.5rem;
+            }
+        }
     }
 
     .character-description {
@@ -1733,18 +1859,27 @@ li.dexter, li.jackie, li.johnny {
         -webkit-line-clamp: 3;
         max-height: 4.5rem;
         word-break: break-word;
+        .expanded-description & {
+            margin-top: 10rem;
+            margin-left: -2rem;
+            max-height: 100%;
+            max-width: 35rem;
+            overflow: visible;
+        }
     }
 
     .characters-divider:after {
         max-width: 20rem;
+        .expanded-description & {
+            max-width: 25rem;
+        }
     }
 
     .read-more {
         grid-row: 5;
         grid-column: 3;
-        margin-left: 5.5rem;
-        margin-top: 6.5rem;
-        transform: scale(1.25);
+        margin-left: 8.5rem;
+        margin-top: 5.5rem;
     }
 
     .character-preview {
@@ -1775,6 +1910,7 @@ li.dexter, li.jackie, li.johnny {
             display: inline-block;
         }
     }
+
     .characters {
         .container-no-bg {
             grid-template-columns: repeat(6, 1fr);
@@ -1787,6 +1923,140 @@ li.dexter, li.jackie, li.johnny {
             .character-preview {
                 box-shadow: none;
             }
+        }
+    }
+
+    .character-image {
+        &.v {
+            .expanded-description & {
+                width: 46%;
+                background-position-x: 2%;
+                height: 98%;
+            }
+        }
+        &.dexter {
+            .expanded-description & {
+                background-image: url('../../Design\ Assets/dexter-transparent-background.png');
+                width: 45%;
+                background-position-x: 2%;
+                height: 98%;
+            }
+        }
+        &.jackie {
+            .expanded-description & {
+                filter: brightness(1) contrast(1.25);
+                height: 100%;
+                top: 0;
+                right: -30rem;
+            }
+        }
+        &.johnny {
+            .expanded-description & {
+                background-position-x: 114%;
+                height: 95%;
+                background-size: contain;
+            }
+        }
+    }
+
+
+
+
+//************  PAGE 5  ************//
+         
+
+
+
+
+    //********  PAGE 5  ********//
+
+
+
+
+
+        //****  PAGE 5  ****// 
+
+    
+        
+    .wallpaper .container-no-bg {
+        grid-row: 4 / span 3;
+        height: 30rem;
+        width: 160rem;
+        justify-content: space-between;
+        grid-column: 2 / span 9;
+        display: flex;
+        position: relative;
+        margin-top: -2rem;
+        overflow: visible;
+        transform-origin: 0 0;
+        transform: scale(.95);
+    }
+
+    .wallpaper-container {
+        display: inline-block;
+        position: relative;
+        margin: 0;
+        height: 25rem;
+        width: 25rem;
+        transform: translateY(0);
+        .wallpaper-overlay {
+            &:before {
+                left: -.75rem;
+            }
+            &:after {
+                right: -.75rem;
+            }
+            &:before, &:after {
+                height: 105%;
+                top: -2.5%;
+            }
+        }
+        &.animation-enter {
+            transform: translateX(0);
+        }
+        .wallpaper-preview {
+            clip-path: polygon(2.5% 0, 97.5% 0, 100% 2.5%, 100% 97.5%, 97.5% 100%, 2.5% 100%, 0 97.5%, 0 2.5%);
+            filter: brightness(.5);
+            &.active {
+                filter: brightness(1);
+            }
+        }
+
+    }
+    
+    .wallpaper-divider {
+        grid-column: 3;
+    }
+
+    .wallpaper-counter {
+        grid-column: 1 / 5;
+    }
+}
+
+//***********************************************************
+//*************** <<<<<|>>>>> ******************************
+//************** <<<<<|||>>>>> **************************
+//************* <<<<<|||||>>>>> **********************
+//************ <<<<<|||||||>>>>> ******************
+//*********** <<<<<<DESKTOP>>>>>> **************
+//************ <<<<<|||||||>>>>> ************
+//************* <<<<<|||||>>>>> **********
+//************** <<<<<|||>>>>> ********
+//*************** <<<<<|>>>>> ******
+//*******************************
+
+
+
+
+
+
+@media screen and (min-width: 1550px) {
+    .hero-text {
+        font-size: 21rem;
+        left: -21rem;
+        top: 6rem;
+        span {
+            margin-right: 8rem;
         }
     }
 }
