--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,10 +8,13 @@
 
 html {
     font-family: 'Saira', sans-serif;
+    background-color: black;
 }
 
 body {
     background-color: black;
+    max-width: 1920px;
+    margin: auto;
 }
 
 h1 {
@@ -374,7 +377,7 @@ header {
     overflow: hidden;
     margin-left: 4.5rem;
     height: 20rem;
-    width: 40rem;
+    width: 45rem;
     position: relative;
     filter: brightness(0.8) hue-rotate(113deg);
     img {
@@ -1168,7 +1171,7 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .centering-div {
-        margin: 0 auto 0 20%;
+        margin: 0 auto 0 21%;
     }
 
     .hero-text {
@@ -1385,7 +1388,7 @@ li.dexter, li.jackie, li.johnny {
         margin-left: 3.75rem;
         height: 34rem;
         width: 80vw;
-        left: -5rem;
+        left: -4.8rem;
     }
 
     .hero-container {
@@ -1497,7 +1500,7 @@ li.dexter, li.jackie, li.johnny {
         display: block;
         transform-origin: 0% 0%;
         bottom: -4.25rem;
-        right: 29rem;
+        right: 45%;
         transform: scaleX(1.25) scaleY(1);
         margin: .5rem 0;
         filter: brightness(0.85);
@@ -1506,7 +1509,7 @@ li.dexter, li.jackie, li.johnny {
         &:after {
             content: '';
             height: 2px;
-            width: 15rem;
+            width: 18rem;
             transform: translateY(-11px) translateX(8px);
             background-color: $red;
             display: inline-block;
@@ -1696,9 +1699,7 @@ li.dexter, li.jackie, li.johnny {
         width: 19rem;
         height: 22rem;
         margin-top: -2rem;
-        grid-column: unset;
-        position: absolute;
-        right: 65%;
+        grid-column: 2 /4;
         .expanded-description & {
             transform: translateX(0) translateY(0);
             grid-row: 3 / span 4;
@@ -1740,6 +1741,12 @@ li.dexter, li.jackie, li.johnny {
             }
         }
     }    
+
+    .character-counter {
+        grid-column: 2 / 5;
+        justify-self: start;
+        margin-left: 23rem;
+    }
 
     .expanded-description .back-button {
         grid-row: 7;
@@ -1787,8 +1794,8 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .character-name, .character-description, .characters-divider {
-        grid-column: 3;
-        margin-left: 4rem;
+        grid-column: 2 / 6;
+        margin-left: 23rem;
         margin-top: 3rem;
     }
     
@@ -1826,6 +1833,7 @@ li.dexter, li.jackie, li.johnny {
         -webkit-line-clamp: 3;
         max-height: 4.5rem;
         word-break: break-word;
+        z-index: 10;
         .expanded-description & {
             margin-top: 10rem;
             margin-left: -2rem;
@@ -1844,8 +1852,8 @@ li.dexter, li.jackie, li.johnny {
 
     .read-more {
         grid-row: 5;
-        grid-column: 3;
-        margin-left: 8.5rem;
+        grid-column: 2;
+        margin-left: 27.5rem;
         margin-top: 5.5rem;
     }
 
@@ -1864,10 +1872,11 @@ li.dexter, li.jackie, li.johnny {
         transform: scaleX(1) scaleY(.5);
         margin: .5rem 0;
         filter: brightness(0.85);
-        grid-column: 4;
+        grid-column: 2 / 5;
+        margin-left: 25rem;
         grid-row: 7;
         margin-top: 6rem;
-        margin-left: -1rem;
+        //margin-left: -1rem;
         &:after {
             content: '';
             height: 3px;
@@ -1883,7 +1892,8 @@ li.dexter, li.jackie, li.johnny {
             grid-template-columns: repeat(6, 1fr);
         }
         .slide.animation-enter {
-            transform: translateX(50vw);
+            left: 800px;
+            transform: translateX(0);
             .character-image, .character-name, .characters-divider, .character-description {
                 transform: translateX(50vw);
             }
@@ -2041,14 +2051,14 @@ li.dexter, li.jackie, li.johnny {
     .hero {
         height: 50rem;
         top: -13rem;
-        left: -11rem;
+        left: -13rem;
         transform: translateY(1px);
         content:url("../../Design\ Assets/hero-fullscreen.png");
     }
     
     .trailer-container {
         top: -7rem;
-        margin-left: 8.75rem;
+        margin-left: 6.75rem;
         height: 44rem;
         width: 70vw;
     }
@@ -2060,7 +2070,7 @@ li.dexter, li.jackie, li.johnny {
     .hero-container i {
         bottom: 5.6rem;
         transform: scale(3.5);
-        left: 4rem;
+        left: 2rem;
         z-index: 2;
         border-width: 68px 0 0 69px;
     }
@@ -2076,7 +2086,7 @@ li.dexter, li.jackie, li.johnny {
             width: 40rem;
             height: 2rem;
             top: 1rem;
-            left: -16.5rem;
+            left: -18.5rem;
         }
     }
 
@@ -2100,34 +2110,42 @@ li.dexter, li.jackie, li.johnny {
         }
     }
 
-    .platform-select {
-        grid-row: 3 / span 4;
-        grid-column: 4 /span 4;
-        margin-top: -2rem;
-        margin-left: 4rem;
-        filter: invert(1);
-        transform: scale(0.9);
+    .hero-text {
         &:before {
             content: "Select Platform";
             text-transform: uppercase;
             position: absolute;
-            left: 5rem;
-            top: 50%;
+            left: 51%;
+            top: -6.7rem;
             transform: translateY(-50%);
-            font-weight: 700;
+            font-weight: 400;
+            font-size: .875rem;
             opacity: 0.7;
+            color: white;
+            z-index: 10;
         }
-        &:after {
-            content: '';
-            position: absolute;
-            height: 1px;
-            width: 6.5vw;
-            background-color: black;
-            opacity: 0.7;
-            top: 49%;
-            left: 15rem;
-            transition: all 0.2s;
-        }
+    }
+
+    .platform-spacer {
+        background-color: white;
+        height: 1px;
+        width: 10px;
+        position: absolute;
+        top: -12px;
+        left: 590px;
+        z-index: 10;
+        opacity: 0.7;
+    }
+
+    .platform-select {
+        grid-row: 3 / span 4;
+        grid-column: 4 /span 4;
+        margin-top: -2rem;
+        margin-left: auto;
+        margin-right: -2rem;
+        filter: invert(1);
+        transform: scale(0.9);
+        max-width: 27rem;
         .platform:before, .platform:after {
             filter: invert(1);
         }
@@ -2135,6 +2153,7 @@ li.dexter, li.jackie, li.johnny {
             filter: invert(1);
         }
         .platform {
+            margin-right: 1rem;
             &.xbox {
                 margin-left: 0.5rem;
             }
@@ -2142,10 +2161,10 @@ li.dexter, li.jackie, li.johnny {
                 background-size: 2rem;
             }
             &.animation-enter {
-                transform: translateX(8vw);
+                transform: translateX(0);
             }
             &.animation-off-right {
-                transform: translateX(16vw);
+                transform: translateX(0);
                 visibility: visible;
             }
         }
@@ -2167,7 +2186,7 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .button-container-home {
-        transform: translateX(-.5rem) translateY(5.5rem);
+        transform: translateX(-14.5rem) translateY(4.5rem);
     }
 
     .trailer-container {
